--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "finnhub": "^1.2.1",
+    "moment": "^2.29.1",
+    "querystring": "^0.2.1",
     "react": "16.13.1",
     "react-native": "0.63.4"
   },
