--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "finnhub": "^1.2.1",
+    "axios": "^0.21.1",
     "moment": "^2.29.1",
     "querystring": "^0.2.1",
     "react": "16.13.1",
