--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "querystring": "^0.2.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-config": "^1.4.2",
     "react-native-svg": "^12.1.0",
     "victory-native": "^35.3.1"
   },
